--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ MeShow/MeShow/MeShow/bin/
 MeShow/MeShow/MeShow/obj/
 MeShow/.vs/MeShow/v15/.suo
 MeShow/.vs/MeShow/DesignTimeBuild/.dtbcache
+MeShow/MeShow/MeShow.iOS/bin/
+MeShow/MeShow/MeShow.UWP/bin/
