--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ MeShow/.vs/MeShow/v15/.suo
 MeShow/.vs/MeShow/DesignTimeBuild/.dtbcache
 MeShow/MeShow/MeShow.iOS/bin/
 MeShow/MeShow/MeShow.UWP/bin/
+MeShow/.vs/MeShow/xs/sqlite3/db.lock
+MeShow/.vs/MeShow/xs/sqlite3/storage.ide
+MeShow/.vs/MeShow/xs/sqlite3/storage.ide-shm
+MeShow/.vs/MeShow/xs/sqlite3/storage.ide-wal
+.DS_Store
