--- a/MeShow/MeShow/MeShow.Android/MeShow.Android.csproj
+++ b/MeShow/MeShow/MeShow.Android/MeShow.Android.csproj
@@ -102,5 +102,8 @@
       <Name>MeShow</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Icon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
