--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ MeShow/.vs/MeShow/xs/sqlite3/storage.ide
 MeShow/.vs/MeShow/xs/sqlite3/storage.ide-shm
 MeShow/.vs/MeShow/xs/sqlite3/storage.ide-wal
 .DS_Store
+MeShow/.vs/MeShow/xs/UserPrefs.xml
