--- a/MeShow/MeShow/MeShow/MeShow.csproj
+++ b/MeShow/MeShow/MeShow/MeShow.csproj
@@ -13,4 +13,22 @@
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.637273" />  
     <PackageReference Include="Xamarin.Essentials" Version="0.6.0-preview" />
   </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Views\TabPages\AdvPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\TabPages\FollowPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\TabPages\IndexPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\TabPages\MyPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\TestView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
