地方大师傅
收到

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ MeShow/.vs/MeShow/xs/sqlite3/storage.ide-shm
 MeShow/.vs/MeShow/xs/sqlite3/storage.ide-wal
 .DS_Store
 MeShow/.vs/MeShow/xs/UserPrefs.xml
+Pic98/src/Pic98/Pic98.debug.exe
