--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ MeShow/.vs/MeShow/xs/sqlite3/storage.ide-wal
 .DS_Store
 MeShow/.vs/MeShow/xs/UserPrefs.xml
 Pic98/src/Pic98/Pic98.debug.exe
+Pic98/bin/Pic98.exe
