--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ MeShow/.vs/MeShow/xs/UserPrefs.xml
 Pic98/src/Pic98/Pic98.debug.exe
 Pic98/bin/Pic98.exe
 Pic98/src/Pic98/wwwroot/Image/Vip/
+ClientSDKDemo/ClientSDKDemo/bin/
+ClientSDKDemo/ClientSDKDemo/obj/
