--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ Pic98/bin/Pic98.exe
 Pic98/src/Pic98/wwwroot/Image/Vip/
 ClientSDKDemo/ClientSDKDemo/bin/
 ClientSDKDemo/ClientSDKDemo/obj/
+ClientSDKDemo/packages/
