--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ ClientSDKDemo/ClientSDKDemo/bin/
 ClientSDKDemo/ClientSDKDemo/obj/
 ClientSDKDemo/packages/
 subraC/cloudfunctions/login/node_modules/
+renrendian/cloudfunctions/node_modules/
