--- a/renrendian/miniprogram/app.json
+++ b/renrendian/miniprogram/app.json
@@ -1,12 +1,15 @@
 {
   "pages": [
     "pages/index/index",
+    "pages/order/order",
+    "pages/shoppingcart/shoppingcart",
     "pages/userConsole/userConsole",
     "pages/storageConsole/storageConsole",
     "pages/databaseGuide/databaseGuide",
     "pages/addFunction/addFunction",
     "pages/deployFunctions/deployFunctions",
-    "pages/chooseLib/chooseLib"
+    "pages/chooseLib/chooseLib",
+    "pages/goods/detail"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
@@ -14,5 +17,33 @@
     "navigationBarBackgroundColor": "#F6F6F6",
     "navigationBarTitleText": "云开发 QuickStart",
     "navigationBarTextStyle": "black"
+  },
+  "tabBar": {
+    "list": [
+      {
+        "pagePath": "pages/index/index",
+        "text": "商品",
+        "iconPath": "images/goods.png",
+        "selectedIconPath": "images/goods_focus.png"
+      },
+      {
+        "pagePath": "pages/shoppingcart/shoppingcart",
+        "text": "购物车",
+        "iconPath": "images/shoppingcart.png",
+        "selectedIconPath": "images/shoppingcart_focus.png"
+      },
+      {
+        "pagePath": "pages/order/order",
+        "text": "订单",
+        "iconPath": "images/order.png",
+        "selectedIconPath": "images/order_focus.png"
+      },
+      {
+        "pagePath": "pages/userConsole/userConsole",
+        "text": "我的",
+        "iconPath": "images/wallet.png",
+        "selectedIconPath": "images/wallet_focus.png"
+      }
+    ]
   }
 }
