--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ ClientSDKDemo/ClientSDKDemo/obj/
 ClientSDKDemo/packages/
 subraC/cloudfunctions/login/node_modules/
 renrendian/cloudfunctions/node_modules/
+SubracBackend/SubracBackend/node_modules/
