豆腐干地方是个
的方式感到附属国

--- a/renrendian/project.config.json
+++ b/renrendian/project.config.json
@@ -8,7 +8,7 @@
 		"minified": true,
 		"newFeature": true
 	},
-	"appid": "wxba872b8ab2ce87fc",
+	"appid": "wx9252e10223cb5939",
 	"projectname": "renrendian",
 	"libVersion": "2.4.1",
 	"condition": {
