--- a/renrendian/miniprogram/app.json
+++ b/renrendian/miniprogram/app.json
@@ -10,7 +10,8 @@
     "pages/deployFunctions/deployFunctions",
     "pages/chooseLib/chooseLib",
     "pages/goods/detail",
-    "pages/goods/list"
+    "pages/goods/list",
+    "pages/goods/reviews"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
