--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@ renrendianBackend/renrendianBackend/.vs/renrendianBackend/v15/.suo
 renrendianBackend/renrendianBackend/renrendianBackend/
 renrendianBackend/renrendianBackend/.vs/renrendianBackend/v15/.suo
 renrendianBackend/renrendianBackend/.vs/renrendianBackend/v15/.suo
+Pic98/src/Pic98/Pic98
+Pic98/src/Pic98/Pic98.debug
+Pic98/src/Pic98/Pic98
