--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ renrendianBackend/renrendianBackend/.vs/renrendianBackend/v15/.suo
 Pic98/src/Pic98/Pic98
 Pic98/src/Pic98/Pic98.debug
 Pic98/src/Pic98/Pic98
+Pic98/src/Pic98/wwwroot/3rd/tinymce/
