--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ Pic98/src/Pic98/Pic98
 Pic98/src/Pic98/Pic98.debug
 Pic98/src/Pic98/Pic98
 Pic98/src/Pic98/wwwroot/3rd/tinymce/
+Memeda/Memeda/merges/
+Memeda/Memeda/bin/
+Memeda/Memeda/bld/
