--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ Pic98/src/Pic98/wwwroot/3rd/tinymce/
 Memeda/Memeda/merges/
 Memeda/Memeda/bin/
 Memeda/Memeda/bld/
+tushare/.vscode/ipch/27d11a09dac6997a/mmap_address.bin
