--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ Memeda/Memeda/merges/
 Memeda/Memeda/bin/
 Memeda/Memeda/bld/
 tushare/.vscode/ipch/27d11a09dac6997a/mmap_address.bin
+Pic98/bin/Pic98
